# ai-engineering-bootcamp

./: .gitignore  Makefile  README.md  docker-compose.yml  env.example  pyproject.toml
apps/api/: Dockerfile  pyproject.toml
apps/api/evals/: eval_retriever.py
apps/api/src/api/: app.py
apps/api/src/api/agents/: agents.py  retrieval_generation.py
apps/api/src/api/agents/prompts/: retrieval_generation.yaml
apps/api/src/api/agents/utils/: prompt_management.py
apps/api/src/api/api/: endpoints.py  models.py
apps/api/src/api/core/: config.py
apps/chatbot_ui/: Dockerfile  pyproject.toml
apps/chatbot_ui/src/chatbot_ui/: __init__.py  app.py
apps/chatbot_ui/src/chatbot_ui/core/: config.py
documentation/development-environment/: README.md
notebooks/prerequisites/: 01-llm-apis.ipynb
notebooks/week_1/: 01-explore-amazon-dataset.ipynb  02-RAG-reproccessing.ipynb  03-Rag-pipeline.ipynb  04-RAG-Eval-dataset.ipynb  05-RAG-Evals.ipynb
notebooks/week_2/: 01-structured-outputs-into.ipynb  02-Structured-Outputs-RAG-Pipeline.ipynb  03-Hybrid-Search.ipynb  04-Reranking.ipynb  05-Prompt-Management.ipynb
notebooks/week_2/prompts/: retrieval_generation.yaml
